test/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test
